--- a/src/Practice_01_21-22.ipynb
+++ b/src/Practice_01_21-22.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Essentials"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -556,6 +563,13 @@
     "while i < 6:\n",
     "  print(i)\n",
     "  i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise"
    ]
   },
   {
