--- a/Practice_07_21-22.ipynb
+++ b/Practice_07_21-22.ipynb
@@ -28,6 +28,13 @@
     "\n",
     "**Note:** Try to write functions that you could use for other problems with small changes, if any."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Solution"
+   ]
   }
  ],
  "metadata": {
