--- a/src/Practices/Practice_5_21-22.ipynb
+++ b/src/Practices/Practice_5_21-22.ipynb
@@ -212,6 +212,79 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "# TODO: Check the similarity between horner algo and the euler formula we derived years ago.  \n",
+    "\n",
+    "# TODO: Test if it is well implemented.\n",
+    "\n",
+    "def horner(x:list, y:list) -> np.array:\n",
+    "    \"\"\" Computes Horner's algorithm for some given coordinates.\n",
+    "\n",
+    "    'x' and 'y' must have the same length.\n",
+    "\n",
+    "    Args:\n",
+    "        x(list(float)): x coordinates of the points.\n",
+    "        y(list(float)): y coordinates of the points.\n",
+    "\n",
+    "    Returns: \n",
+    "        list: with the polynomial coefficients of the Newton interpolation.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    LEN = len(y)\n",
+    "    matrix = np.zeros((LEN, LEN))\n",
+    "\n",
+    "    #matrix column -> j\n",
+    "    for j in range(LEN): \n",
+    "        if j == 0:   \n",
+    "            matrix[:,1] = y\n",
+    "        \n",
+    "        #matrix row -> i\n",
+    "        for i in range(LEN-j): \n",
+    "\n",
+    "            matrix[i, j] = (matrix[i+1,j] - matrix[i,j] ) / (x[i+1] - x[i] )\n",
+    "\n",
+    "    return matrix[0]\n",
+    "\n",
+    "def eval_horner(x, x_points:list = None, y_points:list = None, coeffs:list = None) -> float:\n",
+    "    \"\"\" Evaluates the polynomial returned by Horner's algorithm.\n",
+    "\n",
+    "    If no coefficients are given this method will compute them\n",
+    "\n",
+    "    Args:\n",
+    "        x(float): The points to evaluate the polynomial.\n",
+    "        x(list(float)): x coordinates of the points.\n",
+    "        y(list(float)): y coordinates of the points.\n",
+    "        coeffs(list(float)): coefficients of the polynomial.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: the polynomial evaluated at x.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    coeffs_ = coeffs if coeffs is not None else horner(x_points, y_points)\n",
+    "\n",
+    "    N = len(x_points) - 1\n",
+    "    polynom = coeffs_[N]\n",
+    "    \n",
+    "    for k in range(1,N+1):\n",
+    "        polynom = coeffs_[N-k] + (x -x_points[N-k])*polynom\n",
+    "    \n",
+    "    return polynom\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    pass\n"
+   ]
   }
  ],
  "metadata": {
