--- a/src/Practices/Practice_03_21-22.ipynb
+++ b/src/Practices/Practice_03_21-22.ipynb
@@ -40,65 +40,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RecursionError",
-     "evalue": "maximum recursion depth exceeded",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 33>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=32'>33</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=34'>35</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39mfunc\u001b[39m(x):    \u001b[39mreturn\u001b[39;00m (x\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m \u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=36'>37</a>\u001b[0m     newton(func, \u001b[39m0.0001\u001b[39;49m, \u001b[39m0\u001b[39;49m)\n",
-      "\u001b[1;32m/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb Cell 3'\u001b[0m in \u001b[0;36mnewton\u001b[0;34m(f, err, x0)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=24'>25</a>\u001b[0m \u001b[39mif\u001b[39;00m last_index \u001b[39m+\u001b[39m \u001b[39m10\u001b[39m \u001b[39m>\u001b[39m sys\u001b[39m.\u001b[39mgetrecursionlimit():\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=25'>26</a>\u001b[0m     \u001b[39mraise\u001b[39;00m NoRootException(\u001b[39m'\u001b[39m\u001b[39mCould not find a root. Maybe there are none.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=27'>28</a>\u001b[0m newton(f, err, x0)\n",
-      "\u001b[1;32m/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb Cell 3'\u001b[0m in \u001b[0;36mnewton\u001b[0;34m(f, err, x0)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=24'>25</a>\u001b[0m \u001b[39mif\u001b[39;00m last_index \u001b[39m+\u001b[39m \u001b[39m10\u001b[39m \u001b[39m>\u001b[39m sys\u001b[39m.\u001b[39mgetrecursionlimit():\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=25'>26</a>\u001b[0m     \u001b[39mraise\u001b[39;00m NoRootException(\u001b[39m'\u001b[39m\u001b[39mCould not find a root. Maybe there are none.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=27'>28</a>\u001b[0m newton(f, err, x0)\n",
-      "    \u001b[0;31m[... skipping similar frames: newton at line 28 (2968 times)]\u001b[0m\n",
-      "\u001b[1;32m/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb Cell 3'\u001b[0m in \u001b[0;36mnewton\u001b[0;34m(f, err, x0)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=24'>25</a>\u001b[0m \u001b[39mif\u001b[39;00m last_index \u001b[39m+\u001b[39m \u001b[39m10\u001b[39m \u001b[39m>\u001b[39m sys\u001b[39m.\u001b[39mgetrecursionlimit():\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=25'>26</a>\u001b[0m     \u001b[39mraise\u001b[39;00m NoRootException(\u001b[39m'\u001b[39m\u001b[39mCould not find a root. Maybe there are none.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=27'>28</a>\u001b[0m newton(f, err, x0)\n",
-      "\u001b[1;32m/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb Cell 3'\u001b[0m in \u001b[0;36mnewton\u001b[0;34m(f, err, x0)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=16'>17</a>\u001b[0m last_index \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(newton_cache)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=17'>18</a>\u001b[0m last_newton \u001b[39m=\u001b[39m newton_cache[last_index]    \n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=19'>20</a>\u001b[0m newton_cache[last_index \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m last_newton \u001b[39m-\u001b[39m f(last_newton) \u001b[39m/\u001b[39m dev(last_newton, f)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=21'>22</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mabs\u001b[39m(newton_cache[\u001b[39mlen\u001b[39m(newton_cache)] \u001b[39m-\u001b[39m newton_cache[\u001b[39mlen\u001b[39m(newton_cache) \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m]) \u001b[39m<\u001b[39m err:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=22'>23</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m newton_cache[last_index \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m] \u001b[39m# +1 ?\u001b[39;00m\n",
-      "\u001b[1;32m/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb Cell 3'\u001b[0m in \u001b[0;36mdev\u001b[0;34m(x, f, h)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=7'>8</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdev\u001b[39m(x:\u001b[39mfloat\u001b[39m, f:\u001b[39many\u001b[39m, h:\u001b[39mfloat\u001b[39m \u001b[39m=\u001b[39m \u001b[39m10\u001b[39m\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m(\u001b[39m-\u001b[39m\u001b[39m7\u001b[39m))\u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mfloat\u001b[39m:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/Practice_03_21-22.ipynb#ch0000001?line=8'>9</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m ( f(x\u001b[39m+\u001b[39;49mh) \u001b[39m-\u001b[39m f(x) ) \u001b[39m/\u001b[39m h\n",
-      "\u001b[0;31mRecursionError\u001b[0m: maximum recursion depth exceeded"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
+    "import sys \n",
+    "from typing import Callable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Secant method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bisection(f: 'Callable[float]', a: float, b: float, err: float, Nmax: int = 100_000) -> float:\n",
+    "    r\"\"\"Computes Bisection method to find roots f(x)=0.\n",
     "\n",
+    "    If there are no roots in the interval :math:`[a, b]`, the method will throw an exception.\n",
+    "    This is checked using bolzano's theorem (If :math:`f(a)*f(b) >= 0`).\n",
     "\n",
-    "class NoRootException(Exception):\n",
-    "    pass\n",
+    "    Args:\n",
+    "        f (Callable[float]): Function of which we want to find roots :math:`f(x)=0`.\n",
+    "        a (float): Lower bound of the interval.\n",
+    "        b (float): Upper bound of the interval.\n",
+    "        err (float): Tolerance of the result. It assures that the root is in :math:`[x-err, x+err]`. #TODO: Is this the interval?\n",
+    "        Nmax (int): Maximum number of iterations. Defaults to 100_000.\n",
     "\n",
+    "    Raises:\n",
+    "        ValueError: If, according to Bolzano's theorem, there cannot be roots in :math:`[a, b]`.\n",
+    "        ValueError: If the method, being at least one root in :math:`[a, b]`, fails to to compute the root.\n",
     "\n",
-    "def dev(x:float, f:any, h:float = 10**(-7))-> float:\n",
-    "    return ( f(x+h) - f(x) ) / h \n",
+    "    Returns:\n",
+    "        float: Root x such as f(x)=0 with a tolerance err.\n",
     "\n",
-    "newton_cache = {}\n",
-    "def newton(f:any, err:float, x0:float = 0) -> float:\n",
-    "    \n",
-    "    if len(newton_cache) == 0:\n",
-    "        newton_cache[1] = x0\n",
+    "    Examples:\n",
+    "        >>> f = lambda x: (x**2 - 1)\n",
+    "        >>> bisection(f, -0.5, 2, 1e-10)\n",
+    "        2.9103830456733704e-11\n",
+    "        >>> bisection(f, -0.5, 2, 1e-10, 100)\n",
+    "        ValueError: Could not find a root in the interval [-0.5, 2] with tolerance 1e-10 in 5 iterations.\n",
+    "        >>> bisection(f, 5, 20, 1e-7)\n",
+    "        ValueError: f(a)*f(b)=9576 <0.   No roots in this interval.\n",
+    "    \"\"\"\n",
+    "    if f(a)*f(b) >= 0:\n",
+    "        raise ValueError(f'f(a)*f(b) = {f(a)*f(b)} <0. \\t No roots in this interval.')\n",
     "\n",
-    "    last_index = len(newton_cache)\n",
-    "    last_newton = newton_cache[last_index]    \n",
+    "    N = int(min(Nmax, np.ceil(np.log((b-a)/err) / np.log(2) - 1)))  # What is this?\n",
+    "    a_n = a\n",
+    "    b_n = b\n",
+    "    m_n = (a_n + b_n)/2\n",
+    "    f_m_n = f(m_n)\n",
+    "    for _ in range(1, N+1):\n",
     "\n",
-    "    newton_cache[last_index + 1] = last_newton - f(last_newton) / dev(last_newton, f)\n",
+    "        if f(a_n)*f_m_n < 0:\n",
+    "            b_n = m_n\n",
     "\n",
-    "    if abs(newton_cache[len(newton_cache)] - newton_cache[len(newton_cache) - 1]) < err:\n",
-    "        return newton_cache[last_index + 1] # +1 ?\n",
+    "        elif f(b_n)*f_m_n < 0:\n",
+    "            a_n = m_n\n",
     "\n",
-    "    if last_index + 10 > sys.getrecursionlimit():\n",
-    "        raise NoRootException('Could not find a root. Maybe there are none.')\n",
+    "        m_n = (a_n + b_n)/2\n",
+    "        f_m_n = f(m_n)\n",
     "\n",
-    "    newton(f, err, x0)\n",
+    "        if abs(f_m_n) <= err:\n",
+    "            return m_n\n",
     "\n",
+    "    raise ValueError(f'Could not find a root in the interval [{a}, {b}] with tolerance {err} in {N} iterations.')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bisection method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Newton's method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def newton(err: float = 1e-4, f: 'Callable[float]' = None, f_dev: 'Callable[float]' = None, x0: float = 0) -> float:\n",
+    "    r\"\"\"Newton's method to find roots of a function.\n",
     "\n",
+    "    Args:\n",
+    "        err (float): Desired error of the method.\n",
+    "        f (Callable[float], optional): Analytical function to find its roots. Its input is the point to be evaluated in. Defaults to None.\n",
+    "        f_dev (Callable[float], optional): Analytical derivative of the function. Its input is the point to be evaluated in. Defaults to None.\n",
+    "        x0 (float, optional): Initial guess of the root.\n",
+    "            Note that an inadequate first guess could lead to undesired outputs such as no roots or undesired roots.\n",
+    "            Defaults to 0.\n",
+    "        \n",
+    "    Returns:\n",
+    "        float|None: Root of the function or None if the algorithm reaches its recursion limit.\n",
+    "    \"\"\"\n",
+    "    iter, iter_dict = 0, {0: x0} # Not necessary to store all the values, but anyway\n",
+    "    limit = sys.getrecursionlimit()\n",
     "\n",
+    "    while True:\n",
+    "        if iter + 10 >= limit:\n",
+    "            print(f'Iteration limit ({limit}) reached without finding any root. Try with other initial guess or changing the recursion limit. \\\n",
+    "                    Maybe there are no roots.')\n",
+    "            return\n",
+    "\n",
+    "        iter_dict[iter+1] = iter_dict[iter] - f(iter_dict[iter]) / f_dev(iter_dict[iter])\n",
+    "\n",
+    "        if abs(iter_dict[iter+1] - iter_dict[iter]) < err:\n",
+    "            return iter_dict[iter+1]\n",
+    "\n",
+    "        iter += 1\n",
     "\n",
     "if __name__ == '__main__':\n",
     "\n",
-    "    def func(x):    return (x+1)**2 +1\n",
+    "    def func(x):\n",
+    "        return (x+1)**2 - 1\n",
     "\n",
-    "    newton(func, 0.0001, 0)\n"
+    "    def func_dev(x):\n",
+    "        return 2*(x+1)\n",
+    "\n",
+    "    newton(err=0.0001, f=func, f_dev=func_dev, x0=0.5)\n"
    ]
   }
  ],
