--- a/src/Practices/Practice_03_21-22.ipynb
+++ b/src/Practices/Practice_03_21-22.ipynb
@@ -40,24 +40,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys \n",
-    "from typing import Callable"
+    "from typing import Callable\n",
+    "\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Secant method"
+    "### Bisection method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bisection method"
+    "### Secant method"
    ]
   },
   {
@@ -127,7 +129,57 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def secant(f: 'Callable[float]', a: float, b: float, err: float, Nmax: int = 100_000, x0: float = None) -> float:\n",
+    "    r\"\"\"Computes Secant method to find roots :math:`f(x)=0`.\n",
+    "\n",
+    "    If there are no roots in the interval :math:`[a, b]`, the method will throw an exception.\n",
+    "    This is checked using bolzano's theorem (If :math:`f(a)*f(b) >= 0`).\n",
+    "\n",
+    "    To computes the first iteration, it computes the previous value as :math: `a-1`\n",
+    "\n",
+    "    Args:\n",
+    "        f (Callable[float]): Function of which we want to find roots :math:`f(x)=0`.\n",
+    "        a (float): Lower bound of the interval.\n",
+    "        b (float): Upper bound of the interval.\n",
+    "        err (float): Tolerance of the result. It assures that the root is in :math:`[x-err, x+err]`. #TODO: Is this the interval?\n",
+    "        Nmax (int): Maximum number of iterations. Defaults to 100_000.\n",
+    "        x0 (float): Initial guess for the root. Defaults :math:`(a+b)/2`.\n",
+    "\n",
+    "    Raises:\n",
+    "        ValueError: If, according to Bolzano's theorem, there cannot be roots in :math:`[a, b]`.\n",
+    "        ValueError: If the method, being at least one root in :math:`[a, b]`, fails to to compute the root.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: Root x such as f(x)=0 with a tolerance err.\n",
+    "\n",
+    "    Examples:\n",
+    "        >>> f = lambda x: (x**3 - 5*x - 9)\n",
+    "        >>> secant(f, 2, 5, 1e-4)\n",
+    "        2.8551984513616424\n",
+    "    \"\"\"\n",
+    "    if f(a)*f(b) >= 0:\n",
+    "        raise ValueError(f'f(a)*f(b) = {f(a)*f(b)} <0. \\t No roots in this interval.')\n",
+    "\n",
+    "    x_n = x0 if x0 is not None else (a+b)/2  # TODO: Check if there is a better initial guess\n",
+    "    x_previous = a - 1  # TODO: Check if there is a better initial guess\n",
+    "    f_x_n = f(x_n)\n",
+    "\n",
+    "    for _ in range(1, Nmax+1):\n",
+    "\n",
+    "        f_x_previous = f(x_previous)\n",
+    "\n",
+    "        q_n = (f_x_n - f_x_previous) / (x_n - x_previous)\n",
+    "        x_previous = x_n\n",
+    "\n",
+    "        x_n = x_n - f_x_n / q_n\n",
+    "\n",
+    "        f_x_n = f(x_n)\n",
+    "        if abs(f_x_n) <= err:\n",
+    "            return x_n\n",
+    "\n",
+    "    raise ValueError(f'Could not find a root in the interval [{a}, {b}] with tolerance {err} in {Nmax} iterations.')"
+   ]
   },
   {
    "cell_type": "markdown",
