--- a/src/Practices/Practice_03_21-22.ipynb
+++ b/src/Practices/Practice_03_21-22.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,12 +54,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Bisection method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,6 +240,76 @@
     "        return 2*(x+1)\n",
     "\n",
     "    newton(err=0.0001, f=func, f_dev=func_dev, x0=0.5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def newton_systems(f: 'Callable[float, ...]', J: 'Callable[float, ...]', vec0: np.ndarray, err: float) -> np.ndarray:\n",
+    "    r\"\"\"Solves systems of linear and nonlinear equations using the Newton method.\n",
+    "\n",
+    "    Args:\n",
+    "        f (Callable[float, ...]): Vector function to find its roots.\n",
+    "        J (Callable[float, ...]): Jacobian of f.\n",
+    "        vec0 (np.ndarray): Initial guess of the solution. Avoid using guesses that make J a singular matrix (:math:`|J(vec0)| = 0`).\n",
+    "        err (float): Stopping criteria for the algorithm. Minimum difference between the to last consecutive solutions.\n",
+    "\n",
+    "    Raises:\n",
+    "        ValueError: If the Jacobian of vec0 is a singular matrix, because its inverse cannot be computed.\n",
+    "\n",
+    "    Returns:\n",
+    "        np.ndarray|None: Root of the function or None if the algorithm reaches its recursion limit.\n",
+    "\n",
+    "    Examples:\n",
+    "        Solve\n",
+    "        ..math::\n",
+    "            `x^2+y^2-25=0  \\\\ x-y-2=0`\n",
+    "        With an adequate initial guess.\n",
+    "\n",
+    "        >>> f = lambda x, y: [x**2 + y**2 -25,\n",
+    "                              x - y - 2]\n",
+    "        >>> J = lambda x, y: [[2*x, 2*y],\n",
+    "                              [1, -1]]\n",
+    "        >>> err = 1e-10\n",
+    "        >>> vec0 = [0, 0] #Invalid initial guess.\n",
+    "        >>> newton_systems(f, J, vec0, err)\n",
+    "        Raises numpy.linalg.LinAlgError: Singular matrix\n",
+    "        >>> vec0 = [1, 0] #Valid initial guess.\n",
+    "        >>> roots = newton_systems(f, J, vec0, err)\n",
+    "        >>> roots\n",
+    "        [4.39116499 2.39116499]\n",
+    "        >>> f(*roots)\n",
+    "        [-3.552713678800501e-15, -4.440892098500626e-16]\n",
+    "    \"\"\"\n",
+    "    if np.linal.det(J(*vec0)) == 0:\n",
+    "        raise ValueError('Inverse of the Jacobian cannot be computed. It is a singular matrix (Determinant of the matrix is 0). ')\n",
+    "\n",
+    "    iter, iter_dict = 0, {0: vec0}\n",
+    "    limit = sys.getrecursionlimit()\n",
+    "\n",
+    "    while True:\n",
+    "        if iter + 10 >= limit:\n",
+    "            print(\n",
+    "                f'Iteration limit ({limit}) reached without finding any root. Try with other initial guess or changing the recursion limit.\\\n",
+    "                     Maybe there are no roots.')\n",
+    "            return\n",
+    "\n",
+    "        iter_dict[iter+1] = iter_dict[iter] - np.matmul(np.linalg.inv(J(*iter_dict[iter])), f(*iter_dict[iter]))\n",
+    "\n",
+    "        if np.all(abs(iter_dict[iter + 1] - iter_dict[iter]) < err):\n",
+    "            return iter_dict[iter+1]\n",
+    "\n",
+    "        iter += 1"
    ]
   }
  ],
