--- a/src/Practices/Practice_06_21-22.ipynb
+++ b/src/Practices/Practice_06_21-22.ipynb
@@ -68,6 +68,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -81,11 +105,44 @@
     }
    ],
    "source": [
+    "def composite_trapezoid(f_: 'Callable[float]', a: float, b: float, n: float) -> float:\n",
+    "    \"\"\"Computes the analitical solution of the integral of f from a to b\n",
+    "    following the composite trapezoidal rule.\n",
+    "\n",
+    "    Args:\n",
+    "        f_ (Callable[float]): Function to be integrated.\n",
+    "        a (float): Lower bound of hte interval.\n",
+    "        b (float): Upper bound of the interval.\n",
+    "        n (float): The number of parts the interval is divided into.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: Numerical solution of the integral.\n",
+    "    \"\"\"\n",
+    "    x = np.linspace(a, b, n + 1)\n",
+    "    f = f_(x)\n",
+    "    h = (b - a) / (n)\n",
+    "\n",
+    "    return h/2 * sum(f[:n] + f[1:n+1])\n",
     "\n",
     "\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "def composite_simpson(f_: 'Callable[float]', a: float, b: float, n: float) -> float:\n",
+    "    \"\"\"Computes the analitical solution of the integral of f from a to b\n",
+    "    following the composite Simpson's 1/3 rule.\n",
     "\n",
+    "    Args:\n",
+    "        f_ (Callable[float]): Function to be integrated.\n",
+    "        a (float): Lower bound of hte interval.\n",
+    "        b (float): Upper bound of the interval.\n",
+    "        n (float): The number of parts the interval is divided into.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: Numerical solution of the integral.\n",
+    "    \"\"\"\n",
+    "    x = np.linspace(a, b, n+1)\n",
+    "    f = f_(x)\n",
+    "    h = (b - a) / (n)\n",
+    "\n",
+    "    return (h/3) * (f[0] + 2*sum(f[2:n-1:2]) + 4*sum(f[1:n:2]) + f[n])\n",
     "\n",
     "def composite_midpoint(f_, a:float, b:float, n:float)-> float: \n",
     "    \n",
