--- a/src/Practices/Practice_06_21-22.ipynb
+++ b/src/Practices/Practice_06_21-22.ipynb
@@ -80,6 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Callable\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -88,7 +90,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1"
+    "### Implementation of methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "simp_int() method provided by the teacher is not well implemented, so it has been reimplemented"
    ]
   },
   {
@@ -151,96 +160,82 @@
     "    f = f_(x)\n",
     "    h = (b - a) / (n - 1)\n",
     "    m = np.shape(f)[0]\n",
-    "    return h * sum(f[:m-1])\n",
+    "    return h * sum(f[:m-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = -3\n",
+    "b = 3\n",
+    "n = 11\n",
+    "h = (b - a) / (n - 1)\n",
+    "x = np.linspace(a, b, n)\n",
+    "f = lambda x: 1/ (1 + x**2)\n",
     "\n",
-    "def composite_trapezoid(f_, a:float, b:float, n:float)-> float:\n",
-    "    \n",
-    "    x = np.linspace(a, b, n)\n",
-    "    f = f_(x)\n",
-    "    h = (b - a) / (n - 1)\n",
-    "    m = np.shape(f)[0]\n",
-    "    return h/2 * sum(f[:m-1] + f[1:m])\n",
+    "mid_f = composite_midpoint(f, a, b, 11), \\\n",
+    "        composite_midpoint(f, a, b, 101), \\\n",
+    "        composite_midpoint(f, a, b, 1001), \\\n",
+    "        composite_midpoint(f, a, b, 10001) \n",
     "\n",
+    "trap_f = composite_trapezoid(f, a, b, 11), \\\n",
+    "        composite_midpoint(f, a, b, 101), \\\n",
+    "        composite_midpoint(f, a, b, 1001), \\\n",
+    "        composite_midpoint(f, a, b, 10001) \n",
     "\n",
-    "def simp_int(f_, a:float, b:float, n:float)-> float:\n",
+    "rich_f = simp_int(f, a, b, 11), \\\n",
+    "        simp_int(f, a, b, 101), \\\n",
+    "        simp_int(f, a, b, 1001), \\\n",
+    "        simp_int(f, a, b, 10001) \n",
     "\n",
-    "    '''This function approximates the value of the integral for the function values given by \"f\" \n",
-    "    which must be taken at equispaced nodes deparated by a distance \"h\"  '''\n",
-    "    \n",
-    "    x = np.linspace(a, b, n)\n",
-    "    f = f_(x)\n",
-    "    h = (b - a) / (n - 1)\n",
-    "    n = np.shape(f)[0]\n",
-    "    I_simp = (h/3) * (f[0] + 2*sum(f[:n-2:2]) \\\n",
-    "                + 4*sum(f[1:n-1:2]) + f[n-1])\n",
-    "    \n",
-    "    return I_simp\n",
+    "print(mid_f, '\\n', trap_f, '\\n', rich_f)\n",
     "\n",
-    "def simp_int2(f,h):\n",
-    "    '''This function approximates the value of the integral for the function values given by \"f\" \n",
-    "    which must be taken at equispaced nodes deparated by a distance \"h\"  '''\n",
+    "real_value = 2.498091545 # of the integral\n",
     "\n",
-    "    n = np.shape(f)[0]\n",
-    "    I_simp = (h/3) * (f[0] + 2*sum(f[:n-2:2]) \\\n",
-    "                + 4*sum(f[1:n-1:2]) + f[n-1])\n",
-    "    \n",
-    "    return I_simp\n",
+    "err_mid_f = [abs(real_value - i ) for i in mid_f]\n",
+    "err_trap_f = [abs(real_value - i ) for i in trap_f]\n",
+    "err_rich_f = [abs(real_value - i) for i in rich_f]\n",
     "\n",
+    "print(err_mid_f, '\\n', err_trap_f, '\\n', err_rich_f)\n",
     "\n",
+    "x_values = [(3-(-3))/10, (3-(-3))/100, (3-(-3))/1000, (3-(-3))/10000] # We have to plot \n",
     "\n",
-    "def exercise1():\n",
-    "    \n",
-    "    a = -3\n",
-    "    b = 3\n",
-    "    n = 11\n",
-    "    h = (b - a) / (n - 1)\n",
-    "    x = np.linspace(a, b, n)\n",
-    "    f = lambda x: 1/ (1 + x**2)\n",
+    "plt.loglog(x_values, err_mid_f, color='red', label='mid')\n",
+    "plt.loglog(x_values, err_trap_f, color='green', label='trap')\n",
+    "plt.loglog(x_values, err_rich_f, color='blue', label='rich')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = np.arange(84,6)\n",
     "\n",
-    "    mid_f = composite_midpoint(f, a, b, 11), \\\n",
-    "            composite_midpoint(f, a, b, 101), \\\n",
-    "            composite_midpoint(f, a, b, 1001), \\\n",
-    "            composite_midpoint(f, a, b, 10001) \n",
+    "h = 6\n",
+    "speed = [124, 134, 148, 156, 147, 133, 121, 109, 99, 85, 78, 89, 104, 116, 123]\n",
     "\n",
-    "    trap_f = composite_trapezoid(f, a, b, 11), \\\n",
-    "            composite_midpoint(f, a, b, 101), \\\n",
-    "            composite_midpoint(f, a, b, 1001), \\\n",
-    "            composite_midpoint(f, a, b, 10001) \n",
-    "\n",
-    "    rich_f = simp_int(f, a, b, 11), \\\n",
-    "            simp_int(f, a, b, 101), \\\n",
-    "            simp_int(f, a, b, 1001), \\\n",
-    "            simp_int(f, a, b, 10001) \n",
-    "\n",
-    "    print(mid_f, '\\n', trap_f, '\\n', rich_f)\n",
-    "\n",
-    "    real_value = 2.498091545 # of the integral\n",
-    "\n",
-    "    err_mid_f = [abs(real_value - i ) for i in mid_f]\n",
-    "    err_trap_f = [abs(real_value - i ) for i in trap_f]\n",
-    "    err_rich_f = [abs(real_value - i) for i in rich_f]\n",
-    "\n",
-    "    print(err_mid_f, '\\n', err_trap_f, '\\n', err_rich_f)\n",
-    "\n",
-    "    x_values = [(3-(-3))/10, (3-(-3))/100, (3-(-3))/1000, (3-(-3))/10000] # We have to plot \n",
-    "\n",
-    "    plt.loglog(x_values, err_mid_f, color='red', label='mid')\n",
-    "    plt.loglog(x_values, err_trap_f, color='green', label='trap')\n",
-    "    plt.loglog(x_values, err_rich_f, color='blue', label='rich')\n",
-    "    plt.legend()\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "\n",
-    "    \n",
-    "    t = np.arange(84,6)\n",
-    "\n",
-    "    h = 6\n",
-    "    speed = [124, 134, 148, 156, 147, 133, 121, 109, 99, 85, 78, 89, 104, 116, 123]\n",
-    "    \n",
-    "    print(simp_int2(speed, h))"
+    "print(simp_int2(speed, h))"
    ]
   }
  ],
