--- a/src/Practices/Practice_06_21-22.ipynb
+++ b/src/Practices/Practice_06_21-22.ipynb
@@ -230,6 +230,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "def simp_int2(f,h):\n",
+    "    '''This function approximates the value of the integral for the function values given by \"f\" \n",
+    "    which must be taken at equispaced nodes deparated by a distance \"h\"  '''\n",
+    "\n",
+    "    n = np.shape(f)[0]\n",
+    "    I_simp = (h/3) * (f[0] + 2*sum(f[:n-2:2]) \\\n",
+    "                + 4*sum(f[1:n-1:2]) + f[n-1])\n",
+    "    \n",
+    "    return I_simp\n",
+    "\n",
     "t = np.arange(84,6)\n",
     "\n",
     "h = 6\n",
