--- a/src/Practices/Practice_06_21-22.ipynb
+++ b/src/Practices/Practice_06_21-22.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0001095173150043\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -76,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,17 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10354.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def composite_trapezoid(f_: 'Callable[float]', a: float, b: float, n: float) -> float:\n",
     "    \"\"\"Computes the analitical solution of the integral of f from a to b\n",
@@ -172,9 +172,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "simp_int() takes 2 positional arguments but 4 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb Cell 11'\u001b[0m in \u001b[0;36m<cell line: 18>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=7'>8</a>\u001b[0m mid_f \u001b[39m=\u001b[39m composite_midpoint(f, a, b, \u001b[39m11\u001b[39m), \\\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=8'>9</a>\u001b[0m         composite_midpoint(f, a, b, \u001b[39m101\u001b[39m), \\\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=9'>10</a>\u001b[0m         composite_midpoint(f, a, b, \u001b[39m1001\u001b[39m), \\\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=10'>11</a>\u001b[0m         composite_midpoint(f, a, b, \u001b[39m10001\u001b[39m) \n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=12'>13</a>\u001b[0m trap_f \u001b[39m=\u001b[39m composite_trapezoid(f, a, b, \u001b[39m11\u001b[39m), \\\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=13'>14</a>\u001b[0m         composite_midpoint(f, a, b, \u001b[39m101\u001b[39m), \\\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=14'>15</a>\u001b[0m         composite_midpoint(f, a, b, \u001b[39m1001\u001b[39m), \\\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=15'>16</a>\u001b[0m         composite_midpoint(f, a, b, \u001b[39m10001\u001b[39m) \n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=17'>18</a>\u001b[0m rich_f \u001b[39m=\u001b[39m simp_int(f, a, b, \u001b[39m11\u001b[39;49m), \\\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=18'>19</a>\u001b[0m         simp_int(f, a, b, \u001b[39m101\u001b[39m), \\\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=19'>20</a>\u001b[0m         simp_int(f, a, b, \u001b[39m1001\u001b[39m), \\\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=20'>21</a>\u001b[0m         simp_int(f, a, b, \u001b[39m10001\u001b[39m) \n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=22'>23</a>\u001b[0m \u001b[39mprint\u001b[39m(mid_f, \u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m, trap_f, \u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m, rich_f)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luisgmm/Documents/GitHub/UC3M-NUMERICAL-METHODS-Practices/src/Practices/Practice_06_21-22.ipynb#ch0000011?line=24'>25</a>\u001b[0m real_value \u001b[39m=\u001b[39m \u001b[39m2.498091545\u001b[39m \u001b[39m# of the integral\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: simp_int() takes 2 positional arguments but 4 were given"
+     ]
+    }
+   ],
    "source": [
     "a = -3\n",
     "b = 3\n",
@@ -230,7 +242,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def simp_int2(f,h):\n",
     "    '''This function approximates the value of the integral for the function values given by \"f\" \n",
     "    which must be taken at equispaced nodes deparated by a distance \"h\"  '''\n",
