--- a/src/Practices/Practice_07_21-22.ipynb
+++ b/src/Practices/Practice_07_21-22.ipynb
@@ -37,6 +37,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from typing import Callable\n",
+    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def euler_explicit(f: 'Callable[float, float]', y0: float, t0: float, t: float, h: float) -> np.ndarray:\n",
+    "    r\"\"\"Computes the explicit (forward) Euler method to solve ODEs.\n",
+    "\n",
+    "    Args:\n",
+    "        f (Callable[float, float]): Function depending on y and t in that order.\n",
+    "            Equivalent to f(y,t).\n",
+    "        y0 (float): Initial value of the answer.\n",
+    "            Equivalent to y(t0).\n",
+    "        t0 (float): Initial time.\n",
+    "        t (float): Final time.\n",
+    "        h (float): Separation between the points of the interval.\n",
+    "\n",
+    "    Returns:\n",
+    "        np.ndarray: Numerical solution of the ODE in the interval [t0, t0+h, ..., t-h, t].\n",
+    "    \"\"\"\n",
+    "    t_ = np.arange(t0, t+h, h)\n",
+    "    N = len(t_)\n",
+    "\n",
+    "    u = np.zeros_like(t_)\n",
+    "    u[0] = y0\n",
+    "\n",
+    "    for i in range(N-1):\n",
+    "        u[i+1] = u[i] + h * f(u[i], t_[i])\n",
+    "\n",
+    "    return u"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -54,101 +113,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import sys\n",
-    "\n",
-    "\n",
-    "from practice03 import dev, newton\n",
-    "\n",
-    "\n",
-    "\n",
-    "class NoRootException(Exception):\n",
-    "    pass\n",
-    "\n",
-    "def parse_f(str, iterator, *args):\n",
-    "\n",
-    "    ans = str\n",
-    "    for var in args:\n",
-    "        ans = ans.replace(var, f'{var}[{iterator}]')\n",
-    "\n",
-    "    return ans\n",
-    "\n",
-    "def dev_str(x:float, f_str:str, h:float = 10**(-3))-> float:\n",
-    "    '''Computes the derivate of f_str at x.\n",
-    "    Remarks: \n",
-    "        - f_str depends on u[i+1], that is its variable, i.e. f_str(u[i+1])\n",
-    "    '''\n",
-    "    f_dev_str_h = f_str.replace(\"u[i+1]\", \"x+h\")\n",
-    "    f_dev_str = f_str.replace(\"u[i+1]\", \"x\")\n",
-    " \n",
-    "    return ( eval( f_dev_str_h ) - eval( f_dev_str ) ) / h\n",
-    "\n",
-    "newton_cache = {}\n",
-    "def newton_str(f:any, err:float, x0:float = 0) -> float:\n",
-    "    \n",
-    "    if len(newton_cache) == 0:\n",
-    "        newton_cache[1] = x0\n",
-    "\n",
-    "    last_index = len(newton_cache)\n",
-    "    last_newton = newton_cache[last_index]    \n",
-    "\n",
-    "    newton_cache[last_index + 1] = last_newton - f(last_newton) / dev_str(last_newton, f)\n",
-    "\n",
-    "    if abs(newton_cache[len(newton_cache)] - newton_cache[len(newton_cache) - 1]) < err:\n",
-    "        return newton_cache[last_index + 1] # +1 ?\n",
-    "\n",
-    "    if last_index + 10 > sys.getrecursionlimit():\n",
-    "        raise NoRootException('Could not find a root. Maybe there are none.')\n",
-    "\n",
-    "    newton_str(f, err)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def euler_explicit(f_t_y:str, y0:float, t0:float, t:float, h:float)-> list:\n",
-    "\n",
-    "    t_ = np.arange(t0, t+h, h)\n",
-    "    N = len(t_)\n",
-    "\n",
-    "    u = np.zeros_like(t_)\n",
-    "    u[0] = y0\n",
-    "\n",
-    "    # f = parse_f(f_t_y, 'i', 'y', 't_')   \n",
-    "    f = eval('lambda y, t: ' + f_t_y)\n",
-    "\n",
-    "    for i in range(N-1):\n",
-    "        # u[i+1] = u[i] + h * eval(f)\n",
-    "        u[i+1] = u[i] + h * f(u[i], t_[i])\n",
-    "    \n",
-    "    return u\n",
-    "\n",
-    "\n",
-    "def euler_implicit(f_t_y:str, y0:float, t0:float, t:float, h:float)-> list:\n",
-    "    \n",
-    "    global t_, i, h_\n",
-    "\n",
-    "    t_ = np.arange(t0, t+h, h)\n",
-    "    N = len(t_)\n",
-    "\n",
-    "    u = np.zeros_like(t_)\n",
-    "    u[0] = y0\n",
-    "        \n",
-    "    f = eval('lambda y: ' + f_t_y.replace(\"t\", \"t_[i+1]\"))\n",
-    "\n",
-    "    i = 0\n",
-    "    h_ = h\n",
-    "\n",
-    "    for j in range(N-1):        \n",
-    "        i = j\n",
-    "\n",
-    "        # g = -u[i+1] + u[i] + h * f(u[i+1], t_[i+1])\n",
-    "        g_newton = eval('lambda y: ' + \"h_ *\" + f_t_y.replace(\"t\", \"t_[i+1]\") + '-y ' + f'+ {u[i]}' ) #This magic works, or not. Look \n",
-    "        \n",
-    "        u[i+1] = newton(g_newton, 0.01, u[i])\n",
-    "\n",
-    "    return u\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
